# joblib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake-build.sh  library.h  xmake.lua
docs/: ycy.md
docs/assets/: stkless_co.dot
docs/dyl/: dyl.md
include/: generator.h  library.h  types.h
include/Serializer/: FileStream.h  MemStream.h  STLTypeImpl.hpp  Serializer.hpp  Stream.h  debug.h
include/easylogging/: easylogging++.cc  easylogging++.h
include/parallel/: async.hpp  async_stackless.h  async_stackless_impl.h  generator.hpp  range.h  threadpool.hpp  user_stack.hpp
src/: CMakeLists.txt  generator.cpp  library.cpp  library.h  range.cpp  xmake.lua
src/Serializer/: FileStream.h  Stream.h
src/parallel/: async_stackless.cpp  range.cpp
test/: CMakeLists.txt  main.cpp  main.h  test_serializer.cpp  xmake.lua
